--- a/validityservice/AndroidManifest.xml
+++ b/validityservice/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The Android Open Source Project
+<!-- Copyright (C) 2016 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -20,25 +20,18 @@
           coreApp="true"
           android:sharedUserId="android.uid.system">
 
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.BIND_CARRIER_SERVICES" />
-    <!-- BIND_CARRIER_MESSAGING_SERVICE has been deprecated in favor of BIND_CARRIER_SERVICES. -->
-    <uses-permission android:name="android.permission.BIND_CARRIER_MESSAGING_SERVICE"/>
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS"/>
 
     <application
-                 android:name=".ValidityService"
+                 android:name=".ValidityServiceStarter"
                  android:allowBackup="true"
                  android:icon="@drawable/icon"
                  android:persistent="true"
                  android:label="@string/app_name">
 
+        <service android:name=".ValidityService"
+                 android:exported="true" />
+
     </application>
-    <!--service android:name=".ValidityService"
-             android:exported="true">
-        <intent-filter>
-            <action android:name="com.validity.fingerprint.IValidityService"/>
-        </intent-filter>
-    </service-->
 
 </manifest>
