--- a/configs/gps.conf
+++ b/configs/gps.conf
@@ -1,8 +1,8 @@
 #Uncommenting these urls would only enable
 #the power up auto injection and force injection(test case).
-XTRA_SERVER_1=http://xtra1.gpsonextra.net/xtra2.bin
-XTRA_SERVER_2=http://xtra2.gpsonextra.net/xtra2.bin
-XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra2.bin
+XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
+XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
+XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
 
 #Version check for XTRA
 #DISABLE = 0
@@ -28,7 +28,7 @@ NTP_SERVER=time.gpsonextra.net
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 0
+DEBUG_LEVEL = 4
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
@@ -44,8 +44,7 @@ INTERMEDIATE_POS=0
 SUPL_VER=0x10000
 
 # Emergency SUPL, 1=enable, 0=disable
-# Sensor R&D : Non-SUPL ES should be default
-SUPL_ES=0
+SUPL_ES=1
 
 #Choose PDN for Emergency SUPL
 #1 - Use emergency PDN
@@ -99,7 +98,7 @@ CAPABILITIES=0x37
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 0
+LPP_PROFILE = 0 # Sensor R&D : This will not be injected to MODEM
 
 ################################
 # EXTRA SETTINGS
@@ -115,4 +114,4 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0
+A_GLONASS_POS_PROTOCOL_SELECT = 0 #Sensor R&D : This will not be injected to MODEM
