--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -30,7 +30,7 @@ import init.qcom.power.rc
 
 on early-init
     setprop sys.boot_completed 0
-    export LD_SHIM_LIBS /system/lib/libril.so|libril_shim.so:rmt_storage|librmt_shim.so
+    export LD_SHIM_LIBS libril.so|libril_shim.so:rmt_storage|librmt_shim.so:libqc-opt.so|libshim_qcopt.so
 
     mount debugfs debugfs /sys/kernel/debug
     write /sys/block/mmcblk0/queue/scheduler noop
