--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -401,13 +401,6 @@ on early-boot
 
 on boot
 
-    # Enable intelli-plug for boot
-    write /sys/module/intelli_plug/parameters/intelli_plug_active 1
-    write /sys/module/intelli_plug/parameters/touch_boost_active 0
-    write /sys/module/intelli_plug/parameters/nr_run_profile_sel 2
-    write /sys/module/intelli_plug/parameters/nr_run_hysteresis 8
-    write /sys/module/intelli_plug/parameters/cpu_nr_run_threshold 1000
-
     # Enable intelli-thermal for boot
     write /sys/module/msm_thermal/parameters/enabled 1
     write /sys/module/msm_thermal/core_control/enabled 1
@@ -1643,14 +1636,7 @@ on property:sys.boot_completed=1
     chown system radio /sys/class/sec/sec_epen/boost_level
 
     # Post boot services
-    #start mpdecision
-
-    # Enable intelli-plug for boot
-    write /sys/module/intelli_plug/parameters/intelli_plug_active 1
-    write /sys/module/intelli_plug/parameters/touch_boost_active 0
-    write /sys/module/intelli_plug/parameters/nr_run_profile_sel 2
-    write /sys/module/intelli_plug/parameters/nr_run_hysteresis 8
-    write /sys/module/intelli_plug/parameters/cpu_nr_run_threshold 1000
+    start mpdecision
 
     # Enable intelli-thermal for boot
     write /sys/module/msm_thermal/parameters/enabled 1
