trlte-common: remove intelliplug, we use mpdecision hotplug now as default in new mm kernel
Change-Id: I68b7802884379876286d2906a8557fb07198d830
Signed-off-by: ZION959 <ziontran@gmail.com>

Conflicts:
	rootdir/etc/init.qcom.rc

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -401,13 +401,6 @@ on early-boot
 
 on boot
 
-    # Enable intelli-plug for boot
-    write /sys/module/intelli_plug/parameters/intelli_plug_active 1
-    write /sys/module/intelli_plug/parameters/touch_boost_active 0
-    write /sys/module/intelli_plug/parameters/nr_run_profile_sel 2
-    write /sys/module/intelli_plug/parameters/nr_run_hysteresis 8
-    write /sys/module/intelli_plug/parameters/cpu_nr_run_threshold 1000
-
     # CPU Sets
 
     write /dev/cpuset/foreground/cpus 0-3
@@ -1644,14 +1637,7 @@ on property:sys.boot_completed=1
     chown system radio /sys/class/sec/sec_epen/boost_level
 
     # Post boot services
-    #start mpdecision
-
-    # Enable intelli-plug for boot
-    write /sys/module/intelli_plug/parameters/intelli_plug_active 1
-    write /sys/module/intelli_plug/parameters/touch_boost_active 0
-    write /sys/module/intelli_plug/parameters/nr_run_profile_sel 2
-    write /sys/module/intelli_plug/parameters/nr_run_hysteresis 8
-    write /sys/module/intelli_plug/parameters/cpu_nr_run_threshold 1000
+    start mpdecision
 
 service hostapd /system/bin/hostapd -dddd /data/hostapd/hostapd.conf
     class late_start
