--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1315,7 +1315,7 @@ service sensorhubservice /system/bin/sensorhubservice
 #    group radio system
 
 service time_daemon /system/bin/time_daemon
-    class late_start
+    class main
     user root
     group root
 
