Start time_daemon on early boot * Remembers the time set over reboots correctly
Signed-off-by: placiano <placiano80@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1324,7 +1324,7 @@ service sensorhubservice /system/bin/sensorhubservice
 #    group radio system
 
 service time_daemon /system/bin/time_daemon
-    class late_start
+    class main
     user root
     group root
 
