--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1517,6 +1517,10 @@ on property:sys.boot_completed=1
     write /dev/cpuctl/apps/cpu.notify_on_migrate 1
     write /sys/module/state_notifier/parameters/enabled 1
 
+    # Adaptive LMK
+    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
+    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 53059
+
     # Configure the CPU governor
     write /sys/kernel/msm_limiter/scaling_governor interactive
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 300000
